@@ -1,9 +1,8 @@
 TODO (high to low IMHO)
 
-o fix perms of installed dirs
 o split manpages out of manual.sgml
 o logrotate log files
-o add cronjob for cleanup fax/voice msg
+o fix perms of capi log/error file
 
 o split manual into capisuite-doc
 
