@@ -7,4 +7,4 @@ Upstream Author(s): Gernot Hillier <gernot@hillier.de>
 
 Copyright:
 
-GPL see /usr/share/doc/common-licenses/GPL
+GPL see /usr/share/common-licenses/GPL
